<resources>
    <string name="app_name">GroceryStore-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for checkout -->
    <string name="credit_card">Credit Information</string>
    <string name="card_holder">Card Holder Name</string>
    <string name="credit_number">Card number</string>
    <string name="CVV">CVV</string>
    <string name="points_available">Point available</string>
    <string name="apply_points">apply points</string>
    <string name="pickUp_option">PickUp</string>
    <string name="delivery_option">Delivery</string>
    <string name="pick_pickUp_date">Choose pickUp Date</string>
    <string name="pick_delivery_time">Choose delivery Date</string>
    <string name="sub_total">Subtotal</string>
    <string name="total_amount">Total</string>
    <string name="place_order">Place Order</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--In common label-->
    <string name="buildingNo_label">Building No:</string>
    <string name="street_label">Street:</string>
    <string name="town_label">Town:</string>
    <string name="username_label">Username:</string>
    <string name="name_label">Name:</string>
    <string name="password_label">Password:</string>

    <!--Account Info Strings-->
    <string name="AccountInfo_label">Account Information</string>
    <string name="points_AccountInfo_label">Current points:</string>
    <string name="editAccountInfo_button">Edit Information</string>
    <string name="EditAccountInfo_label">Information Edit</string>
    <string name="address_AccountInfo_label">Address:</string>

    <!--Edit Account Info Strings-->
    <string name="updateName_button">Update Name</string>
    <string name="newPassword_EditInfo_label">New Password:</string>
    <string name="updatePassword_button">Update Password</string>
    <string name="updateAddress_button">Update Address</string>
    <string name="return_button">Back</string>

    <!--Log in Strings-->
    <string name="Login_label">Log In</string>
    <string name="LogIn_button">Login</string>
    <string name="SignUp_button">Signup</string>

    <!--Sign Up Strings-->
    <string name="SignUp_label">Sign Up</string>
    <string name="SignUp_Address_label">Please add in your address:</string>
    <string name="SignupPage_button">Signup</string>
    <string name="profile_label">Profile</string>
    <string name="Logout_button">Logout</string>

    <!--Add To Cart Strings-->
    <string name="AddToCart_button">Add To Cart</string>
</resources>